CSS loader animation: bug fix (z-index property)

--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,6 +1,7 @@
 @keyframes loader {
     100% {
         opacity: 0;
+        z-index: -10;
     }
 } 
 
